tests/diagnostics/catalog/snapshots/ir/IR0038.snap
error[IR0038]: IR_E_INVALID_MODIFIER
 --> tests/diagnostics/catalog/sources/ir/IR0038.vit:4:8
  |
4 |   give unresolved_ir_contract;
  |        ^^^^^^^^^^^^^^^^^^^^^^ IR diagnostic anchor
  = note: snapshot covers code, title, span, notes, suggestions, recovery and stable order for IR0038
  = help: keep IR validation diagnostics structured and catalog-backed
